samples/_failures_safe/1761161926_a26e40_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7be5d4af.c: In function ‘main’:
./samples/SAFE/__tmp_7be5d4af.c:166:23: error: expected ‘)’ at end of input
  166 |         if (input_char
      |            ~          ^
      |                       )
./samples/SAFE/__tmp_7be5d4af.c:166:9: error: expected declaration or statement at end of input
  166 |         if (input_char
      |         ^~
./samples/SAFE/__tmp_7be5d4af.c:166:9: error: expected declaration or statement at end of input
